--- a/assets/stylus/components/hero.styl
+++ b/assets/stylus/components/hero.styl
@@ -1,6 +1,17 @@
 #solution
+  .custom-over
+    overflow scroll
   .solution-image
     max-width 1000px
+    min-width 900px
+    object-fit: cover
+    image-rendering: -moz-crisp-edges;         /* Firefox */
+    image-rendering:   -o-crisp-edges;         /* Opera */
+    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;
+    @media (max-width 560px)
+      margin-left -4px
     @media (max-width 1024px)
       width 100%
 #hero-section
